--- a/DEPRJCT.ipynb
+++ b/DEPRJCT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWAOHQPn1xW2W7C8M70yNR"
+      "authorship_tag": "ABX9TyPLtgnhZYGIjZLF3JESrQNL"
     },
     "kernelspec": {
       "name": "python3",
@@ -61,8 +61,7 @@
         "import socket\n",
         "import json\n",
         "from kafka import KafkaConsumer, KafkaProducer\n",
-        "import time\n",
-        "\n"
+        "import time"
       ],
       "metadata": {
         "id": "FvqMcek87pEK"
@@ -1508,107 +1507,22 @@
     {
       "cell_type": "code",
       "source": [
-        "! bin/kafka-console-consumer.sh --zookeeper localhost:9092 --topic AIHSTREAM >| file.csv\n"
+        "! bin/kafka-console-consumer.sh -from-beginning --bootstrap-server localhost:9092 --topic AIHSTREAM >| file.csv\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "F_BLC5piLpNb",
-        "outputId": "4ea769ef-20e5-485f-b065-8f506e839baf"
+        "outputId": "ee276f04-792b-49ae-adc0-3c4d6348a48b"
       },
-      "execution_count": 67,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "zookeeper is not a recognized option\n",
-            "Option                                   Description                            \n",
-            "------                                   -----------                            \n",
-            "--bootstrap-server <String: server to    REQUIRED: The server(s) to connect to. \n",
-            "  connect to>                                                                   \n",
-            "--consumer-property <String:             A mechanism to pass user-defined       \n",
-            "  consumer_prop>                           properties in the form key=value to  \n",
-            "                                           the consumer.                        \n",
-            "--consumer.config <String: config file>  Consumer config properties file. Note  \n",
-            "                                           that [consumer-property] takes       \n",
-            "                                           precedence over this config.         \n",
-            "--enable-systest-events                  Log lifecycle events of the consumer   \n",
-            "                                           in addition to logging consumed      \n",
-            "                                           messages. (This is specific for      \n",
-            "                                           system tests.)                       \n",
-            "--formatter <String: class>              The name of a class to use for         \n",
-            "                                           formatting kafka messages for        \n",
-            "                                           display. (default: kafka.tools.      \n",
-            "                                           DefaultMessageFormatter)             \n",
-            "--from-beginning                         If the consumer does not already have  \n",
-            "                                           an established offset to consume     \n",
-            "                                           from, start with the earliest        \n",
-            "                                           message present in the log rather    \n",
-            "                                           than the latest message.             \n",
-            "--group <String: consumer group id>      The consumer group id of the consumer. \n",
-            "--help                                   Print usage information.               \n",
-            "--include <String: Java regex (String)>  Regular expression specifying list of  \n",
-            "                                           topics to include for consumption.   \n",
-            "--isolation-level <String>               Set to read_committed in order to      \n",
-            "                                           filter out transactional messages    \n",
-            "                                           which are not committed. Set to      \n",
-            "                                           read_uncommitted to read all         \n",
-            "                                           messages. (default: read_uncommitted)\n",
-            "--key-deserializer <String:                                                     \n",
-            "  deserializer for key>                                                         \n",
-            "--max-messages <Integer: num_messages>   The maximum number of messages to      \n",
-            "                                           consume before exiting. If not set,  \n",
-            "                                           consumption is continual.            \n",
-            "--offset <String: consume offset>        The offset to consume from (a non-     \n",
-            "                                           negative number), or 'earliest'      \n",
-            "                                           which means from beginning, or       \n",
-            "                                           'latest' which means from end        \n",
-            "                                           (default: latest)                    \n",
-            "--partition <Integer: partition>         The partition to consume from.         \n",
-            "                                           Consumption starts from the end of   \n",
-            "                                           the partition unless '--offset' is   \n",
-            "                                           specified.                           \n",
-            "--property <String: prop>                The properties to initialize the       \n",
-            "                                           message formatter. Default           \n",
-            "                                           properties include:                  \n",
-            "                                          print.timestamp=true|false            \n",
-            "                                          print.key=true|false                  \n",
-            "                                          print.offset=true|false               \n",
-            "                                          print.partition=true|false            \n",
-            "                                          print.headers=true|false              \n",
-            "                                          print.value=true|false                \n",
-            "                                          key.separator=<key.separator>         \n",
-            "                                          line.separator=<line.separator>       \n",
-            "                                          headers.separator=<line.separator>    \n",
-            "                                          null.literal=<null.literal>           \n",
-            "                                          key.deserializer=<key.deserializer>   \n",
-            "                                          value.deserializer=<value.            \n",
-            "                                           deserializer>                        \n",
-            "                                          header.deserializer=<header.          \n",
-            "                                           deserializer>                        \n",
-            "                                         Users can also pass in customized      \n",
-            "                                           properties for their formatter; more \n",
-            "                                           specifically, users can pass in      \n",
-            "                                           properties keyed with 'key.          \n",
-            "                                           deserializer.', 'value.              \n",
-            "                                           deserializer.' and 'headers.         \n",
-            "                                           deserializer.' prefixes to configure \n",
-            "                                           their deserializers.                 \n",
-            "--skip-message-on-error                  If there is an error when processing a \n",
-            "                                           message, skip it instead of halt.    \n",
-            "--timeout-ms <Integer: timeout_ms>       If specified, exit if no message is    \n",
-            "                                           available for consumption for the    \n",
-            "                                           specified interval.                  \n",
-            "--topic <String: topic>                  The topic to consume on.               \n",
-            "--value-deserializer <String:                                                   \n",
-            "  deserializer for values>                                                      \n",
-            "--version                                Display Kafka version.                 \n",
-            "--whitelist <String: Java regex          DEPRECATED, use --include instead;     \n",
-            "  (String)>                                ignored if --include specified.      \n",
-            "                                           Regular expression specifying list   \n",
-            "                                           of topics to include for consumption.\n"
+            "Processed a total of 1208 messages\n"
           ]
         }
       ]
