--- a/DEPRJCT.ipynb
+++ b/DEPRJCT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLtgnhZYGIjZLF3JESrQNL"
+      "authorship_tag": "ABX9TyN4hI4s4cYT8UVKc8bFouNH"
     },
     "kernelspec": {
       "name": "python3",
@@ -83,7 +83,7 @@
         "# Creating the API object by passing in auth information\n",
         "api = tweepy.API(auth) \n",
         "\n",
-        "Hastag=\"السعودية\"\n"
+        "Hashtag=\"السعودية\"\n"
       ],
       "metadata": {
         "id": "Cf_uj-9t7RYD"
@@ -111,7 +111,7 @@
       "cell_type": "code",
       "source": [
         "def get_twitter_data():\n",
-        "    res = api.search(Hastag)\n",
+        "    res = api.search(Hashtag)\n",
         "    producer.send(topic_name) "
       ],
       "metadata": {
